# docs/swagger.yaml
@@ -1,25 +1,37 @@
 definitions:
+  handler.N:
+    properties:
+      number:
+        type: integer
+    type: object
+  handler.T:
+    properties:
+      finish_time:
+        type: integer
+    type: object
   handler.Token:
     properties:
       token:
         type: string
     type: object
-  model.User:
+  model.Backpad:
     properties:
+      day:
+        type: integer
+      hours:
+        type: integer
+      minutes:
+        type: integer
       name:
         type: string
-      password:
-        type: string
-      sex:
+      state:
         type: integer
       student_id:
         type: string
-      summary:
-        type: string
-      user_picture:
+      time:
         type: string
     type: object
-  model.homework:
+  model.Homework:
     properties:
       class:
         type: string
@@ -34,6 +46,34 @@ definitions:
       title:
         type: string
     type: object
+  model.Skin:
+    properties:
+      price:
+        type: integer
+      skin_id:
+        type: integer
+      student_id:
+        type: string
+    type: object
+  model.User:
+    properties:
+      flower:
+        type: integer
+      gold:
+        type: integer
+      name:
+        type: string
+      password:
+        type: string
+      sex:
+        type: integer
+      student_id:
+        type: string
+      summary:
+        type: string
+      user_picture:
+        type: string
+    type: object
 host: 124.71.184.107
 info:
   contact:
@@ -44,6 +84,96 @@ info:
   title: TheEventsGarden API
   version: 1.0.0
 paths:
+  /garden:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Skin'
+            type: array
+        "400":
+          description: 获取皮肤失败
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 获取用户花园皮肤
+      tags:
+      - garden
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 只需要 skin_id
+        in: body
+        name: Skin
+        required: true
+        schema:
+          $ref: '#/definitions/model.Skin'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 购买成功
+        "203":
+          description: 未找到该皮肤" or "已拥有" or "未购买x号皮肤" or "金币不足
+        "400":
+          description: 购买皮肤失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 新增皮肤
+      tags:
+      - garden
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 需要 number
+        in: body
+        name: Skin
+        required: true
+        schema:
+          $ref: '#/definitions/handler.N'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 摘花成功
+        "203":
+          description: 金币不足
+        "400":
+          description: 摘花失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 买花
+      tags:
+      - garden
   /homework:
     post:
       consumes:
@@ -68,7 +198,7 @@ paths:
           description: 获取成功
           schema:
             items:
-              $ref: '#/definitions/model.homework'
+              $ref: '#/definitions/model.Homework'
             type: array
         "400":
           description: Lack Necessary_Param.
@@ -77,7 +207,193 @@ paths:
         "500":
           description: Fail.
       summary: 爬取作业
+  /notepad:
+    get:
+      consumes:
+      - application/json
+      description: 获取该用户所有待办
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Backpad'
+            type: array
+        "400":
+          description: 查询失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 查询待办
+      tags:
+      - notepad
+    post:
+      consumes:
+      - application/json
+      description: 需要该待办名 name 和
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 只需要该待办名 name
+        in: body
+        name: Backpad
+        required: true
+        schema:
+          $ref: '#/definitions/model.Backpad'
+      - description: 需要完成时间 finish_time
+        in: body
+        name: time
+        required: true
+        schema:
+          $ref: '#/definitions/handler.T'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 完成待办成功
+        "203":
+          description: 失败，该用户今日已使用该待办名
+        "400":
+          description: 完成待办失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 完成待办
+      tags:
+      - notepad
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 只需要该待办名 name
+        in: body
+        name: Backpad
+        required: true
+        schema:
+          $ref: '#/definitions/model.Backpad'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 修改待办成功
+        "400":
+          description: 新增待办失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 取消待办
+      tags:
+      - notepad
+  /notepad/clear:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 只需要该待办名 name
+        in: body
+        name: Backpad
+        required: true
+        schema:
+          $ref: '#/definitions/model.Backpad'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 清除待办成功
+        "203":
+          description: 该待办已完成或已取消" or "金币不足
+        "400":
+          description: 新增待办失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 消除未完成待办
+      tags:
+      - notepad
+  /notepad/create:
+    post:
+      consumes:
+      - application/json
+      description: 接收新的Backpad结构体来新建待办
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: name 必需 hour和minute可选
+        in: body
+        name: Backpad
+        required: true
+        schema:
+          $ref: '#/definitions/model.Backpad'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 新增待办成功
+        "203":
+          description: 失败，该用户今日已使用该待办名
+        "400":
+          description: 新增待办失败" or "Lack Necessary_Param.
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 新建待办
+      tags:
+      - notepad
   /user:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: 查询失败
+        "401":
+          description: Token Invalid.
+        "500":
+          description: Fail.
+      summary: 获取用户信息
+      tags:
+      - user
     post:
       consumes:
       - application/json
